# almost-idempotent-channels

./: .gitignore  AGENTS.md  ALGORITHM.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  MODULE_PLAN.md  Makefile  PROFILING.md  README.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: session-start.sh
bench/: CMakeLists.txt  aic_bench.h  bench_contraction.c  bench_funcalc.c  bench_latd.c  bench_mat.c  bench_smoke.c
cmake/: AICConfig.cmake.in  aic.pc.in
docs/: Project.toml  README.md  applications_and_frictions.md  cbnorm_tight_certifier.md  make.jl
docs/adversarial/: README.md  domain.md  nla.md
docs/plots/: Project.toml  containment.jl  eta0_oracle.jl  roundtrip.jl  universality.jl
docs/research/: assoc_ecsa_research.md  cbnorm_tight_certifier.md  cstar_build_design.md  cstar_masterloop_spec.md  dbo3_dimsweep_design.md  ecstar_paper_leg.md  ecstar_web_leg.md  eigvec_certified_design.md  factorize_d4_research.md  factorize_f3_spec.md  factorize_f3_spec_B.md  factorize_f3_spec_C.md  factorize_f3_synthesis.md  factorize_f4_design.md  julia_package_design.md  julia_package_research_bestpractice.md  julia_package_research_su2fft.md  lem_extension_spec.md  matrix_free_certified_phitilde.md  opspace_design.md  opspace_o2_design.md  opspace_paper_leg.md  opspace_web_leg.md  packaging_c_core.md  packaging_julia.md  packaging_python_and_release.md  readme_design.md  sgn_global_research.md
docs/research/docsite/: STYLE.md  brief-api.md  brief-architecture.md  brief-examples.md  brief-math.md  brief-structure.md
docs/src/: api.md  index.md  tutorial.md
docs/src/assets/: demo.cast
docs/src/explanation/: architecture.md  certified_arithmetic.md  constructive.md  design_limits.md  dim_independence.md  math_story.md
docs/src/getting_started/: install.md  quickstart.md
docs/src/howto/: block_structure.md  build_ucpmap.md  certify_defect.md  domain_check.md  factorize.md  iscptp.md  mosek_install.md  read_bracket.md
docs/src/reference/: api.md  bibliography.md  notation.md
docs/src/tutorials/: eta0_oracle.md  mosek_tight.md  multiblock.md  pipeline.md
include/: aic_assoc.h  aic_cbnorm.h  aic_contraction.h  aic_corner.h  aic_cstar.h  aic_cstar_internal.h  aic_dhom.h  aic_ecstar.h  aic_errreduce.h  aic_factorize.h  aic_factorize_internal.h  aic_funcalc.h  aic_idemp.h  aic_mat.h  aic_opspace.h  aic_opspace_shim.h  aic_projection.h  aic_ucp.h  aic_ucp_shim.h
include/aic/: aic.h  aic_assoc.h  aic_assoc_shim.h  aic_cbnorm.h  aic_channels.h  aic_corner.h  aic_cstar.h  aic_cstar_internal.h  aic_dhom.h  aic_ecstar.h  aic_errreduce.h  aic_factorize.h  aic_factorize_artifacts_shim.h  aic_factorize_internal.h  aic_factorize_shim.h  aic_funcalc.h  aic_idemp.h  aic_iso_shim.h  aic_latd.h  aic_mat.h  aic_opspace.h  aic_projection.h  aic_ucp.h  aic_ucp_shim.h
julia/AlmostIdempotentChannels.jl/: Manifest.toml  Project.toml
julia/AlmostIdempotentChannels.jl/ext/: AICMosekExt.jl
julia/AlmostIdempotentChannels.jl/src/: AlmostIdempotentChannels.jl  api.jl  basin.jl  ccall.jl  ccall_factorize.jl  libaic.jl  sdp.jl  sdp_stubs.jl  show.jl  types.jl  types_algebra.jl  types_channel.jl  types_core.jl
julia/AlmostIdempotentChannels.jl/test/: fixtures.jl  runtests.jl  test_aqua.jl  test_core.jl  test_factorize.jl  test_sdp.jl
julia/env/: Manifest.toml  Project.toml
paper/: FINDINGS.md
paper/shards/: shard-A-motivation-main-results.md  shard-B-analytic-tools.md  shard-C-approximate-unitary-group.md  shard-D-projection-subspaces.md  shard-E-delta-homs-main-proof.md  shard-F-tensor-extensions.md  shard-G-ucp-maps-idemp-structure.md  shard-H-almost-idemp-factorization.md
paper/src/: approximate_algebras.tex  mypaths.sty  mythm.sty  myutil.sty
src/: aic.c  aic_assoc_algebra.c  aic_assoc_extract.c  aic_assoc_regularize.c  aic_assoc_shim.c  aic_assoc_superop.c  aic_cbnorm.c  aic_cbnorm_certify.c  aic_cbnorm_certify_rect.c  aic_cbnorm_certify_restore.c  aic_cbnorm_distance.c  aic_cbnorm_internal.h  aic_channels_diag.c  aic_channels_internal.h  aic_channels_unitary.c  aic_channels_validate.c  aic_contraction.c  aic_contraction_anderson.c  aic_contraction_internal.h  aic_contraction_work.c  aic_corner_alpha.c  aic_corner_alpha_build.c  aic_corner_compress.c  aic_corner_extract.c  aic_corner_ha.c  aic_corner_hilbert.c  aic_corner_internal.h  aic_corner_product.c  aic_cstar_build.c  aic_cstar_classes.c  aic_cstar_extension.c  aic_cstar_matalg.c  aic_cstar_merge.c  aic_cstar_merging.c  aic_cstar_stages.c  aic_cstar_subalg.c  aic_dhom_B.c  aic_dhom_approx.c  aic_dhom_defect.c  aic_dhom_diag.c  (+97 more)
tests/: CMakeLists.txt  aic_adversarial.c  aic_adversarial.h  aic_adversarial_blockalg.c  aic_adversarial_carrier.c  aic_adversarial_carrier_dense.c  aic_adversarial_domain.c  aic_adversarial_domain2.c  aic_adversarial_kahan.c  aic_adversarial_nla.c  aic_adversarial_noncomm.c  aic_adversarial_projsplit.c  aic_test.h  aic_watchdog.c  aic_watchdog.h  fixtures_certify.inc.h  fixtures_d24.inc.h  fixtures_opspace_o2.inc.h  test_adversarial.c  test_assoc.c  test_assoc2.c  test_cbnorm.c  test_cbnorm_distance.c  test_certify.c  test_certify_teeth.c  test_channels.c  test_contraction.c  test_contraction_sgn.h  test_corner.c  test_cstar.c  test_cstar_build.c  test_cstar_extension.c  test_cstar_merge.c  test_cstar_merging.c  test_dbo3.c  test_delta_kraus.c  test_dhom.c  test_ecstar.c  test_eigmult.c  test_eigvec.c  (+26 more)
tools/: diamond_oracle.wls  gen_fixtures_certify.jl  gen_fixtures_d24.jl  gen_fixtures_factorize_f4.jl  gen_fixtures_opspace_o2.jl  probe_o2_diag2.jl  probe_o2_pin2.jl  smoke_gadc_cbnorm.jl
